# dictcaller

dictcallee/: dictcallee.cabal
dictcallee/src/: Dictionary.hs  ItemTable.hs  Main.hs  SQLite3DataSource.hs  Server.hs
dictcaller/: background.html  background.js  frame.css  manifest.json  options.html  options.js  search.js
