name:                dictcallee
version:             0.0.1.0
synopsis:            A dictionary server for the dictcaller. This also has some funny function.
-- description:         
homepage:            http://twitter.com/yuga
license:             BSD3
license-file:        LICENSE
author:              Shohei Murayama
maintainer:          shohei.murayama@gmail.com
copyright:           Copyright (c) 2013 Shohei Murayama
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- source-repository    head
--  type:              git
--  location:          https://github.com/yuga/dictcall-aster

executable dictcallee
  default-language:    Haskell2010
  build-depends:         base <5
                       , template-haskell

                       -- General
                       , bytestring
                       , containers
                       , time
                       , text
                       , transformers

                       -- Web Libraries
                       , aeson

                       -- Database
                       , HDBC >=2
                       , HDBC-session
                       , HDBC-sqlite3

                       -- HRR
                       , DB-record
                       , names-th
                       , relational-join
                       , relational-query-HDBC
                       , sql-words
                       , relational-SQLite3

                       -- Server
                       , scotty ==0.5.0
                       , http-types ==0.8.1
                       , wai ==1.4.0.2
                       , wai-extra ==1.3.4.5
                       , wai-logger ==0.3.1
                       , wai-middleware-static ==0.3.2
                       , warp ==1.3.9.2

  other-modules:
                         Dictionary
                       , ItemTable
                       , Server 
                       , SQLite3DataSource
  main-is:             Main.hs
  hs-source-dirs:      src
  ghc-options:         -Wall 
